[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scr/images/Player/criature_fall.png" type="Texture" id=2]
[ext_resource path="res://scr/images/Player/criature_idle.png" type="Texture" id=3]
[ext_resource path="res://scr/images/Player/criature_run.png" type="Texture" id=4]
[ext_resource path="res://scr/sound/jump1.wav" type="AudioStream" id=5]
[ext_resource path="res://grass1.wav" type="AudioStream" id=6]
[ext_resource path="res://grass2.wav" type="AudioStream" id=7]

[sub_resource type="Gradient" id=20]
colors = PoolColorArray( 0.540527, 0.464637, 0.361055, 1, 0.442871, 0.371701, 0.264685, 1 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0459183 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=23]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=24]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 200.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 23 )
color_ramp = SubResource( 21 )

[sub_resource type="CapsuleShape2D" id=17]
radius = 3.0
height = 8.0

[sub_resource type="GDScript" id=19]
script/source = "extends RemoteTransform2D


func _ready():
	remote_path = get_tree().get_nodes_in_group('main_game')[0].get_node('Camera2D').get_path()


"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachine" id=1]
states/fall/node = SubResource( 7 )
states/fall/position = Vector2( 527, 65 )
states/idle/node = SubResource( 6 )
states/idle/position = Vector2( 316, 121 )
states/run/node = SubResource( 8 )
states/run/position = Vector2( 527, 183 )
transitions = [ "idle", "fall", SubResource( 9 ), "fall", "run", SubResource( 10 ), "idle", "run", SubResource( 11 ), "run", "idle", SubResource( 12 ), "run", "fall", SubResource( 13 ), "fall", "idle", SubResource( 14 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=15]
resource_name = "fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=16]
resource_name = "run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=18]
radius = 3.0
height = 8.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
z_index = 2
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 8 )
z_index = -1
amount = 32
explosiveness = 0.1
randomness = 1.0
local_coords = false
process_material = SubResource( 24 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, 0 )
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.00784314, 1, 0, 1 )
position = Vector2( 0, 1 )
shape = SubResource( 17 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
script = SubResource( 19 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 1 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fall = SubResource( 15 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 18 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.7

[node name="GrassSounds" type="Node" parent="."]

[node name="Grass1" type="AudioStreamPlayer" parent="GrassSounds"]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Grass2" type="AudioStreamPlayer" parent="GrassSounds"]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Timer" type="Timer" parent="GrassSounds"]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="GrassSounds/Timer" to="." method="_on_Timer_timeout"]
